# Modern-CMake-for-Cpp-2E

./: .devcontainer.json  .dockerignore  .gitignore  Dockerfile  Dockerfile.examples  LICENSE  README.md  build.sh  build_base.sh  devel.sh  docker-compose.yaml  rebuild_base.sh
examples/appendix02/01-basic/: CMakePresets.json
examples/ch01/01-hello/: .gitignore  CMakeLists.txt
examples/ch02/01-arguments/: bracket.cmake  quoted.cmake
examples/ch02/04-scope/: scope.cmake
examples/ch02/07-loops/: foreach.cmake  while.cmake
examples/ch02/08-definitions/: function.cmake
examples/ch02/09-procedural/: CMakeLists.txt
examples/ch02/10-useful/: include.cmake  message_context.cmake  message_error.cmake
examples/ch03/02-include/: main.cpp
examples/ch04/01-targets/: calculations.cpp
examples/ch04/02-include/: CMakeLists.txt
examples/ch04/05-structure/: CMakeLists.txt
examples/ch04/07-features/: CMakeLists.txt
examples/ch04/08-test_run/: CMakeLists.txt
examples/ch05/01-targets/: CMakeGraphVizOptions.cmake
examples/ch05/02-definitions/: definitions.cpp
examples/ch05/02-propagated/: CMakeLists.txt
examples/ch05/03-command/: main.cpp
examples/ch05/04-command/: main.cpp
examples/ch05/05-optimize/: inline.cpp  unroll.cpp
examples/ch06/01-nesting/: CMakeLists.txt
examples/ch06/02-boolean/: CMakeLists.txt
examples/ch06/04-configure/: CMakeLists.txt
examples/ch07/01-sources/: CMakeLists.txt  gui_macos.cpp
examples/ch07/04-find-package-custom/: CMakeLists.txt
examples/ch07/05-dynamic/: CMakeLists.txt
examples/ch08/02-find-package-targets/: CMakeLists.txt
examples/ch08/05-gmock/: CMakeLists.txt
examples/ch09/01-find-package-variables/: CMakeLists.txt
examples/ch09/03-catch2/: CMakeLists.txt
examples/ch09/03-valgrind/: CMakeLists.txt
examples/ch09/04-find-pkg-config/: CMakeLists.txt
examples/ch09/05-fetch-content/: CMakeLists.txt
examples/ch09/06-fetch-content-find-package/: CMakeLists.txt
examples/ch09/07-external-project/: CMakeLists.txt  yaml-cpp.in
examples/ch09/07-external-project-git/: CMakeLists.txt
examples/ch09/08-git-submodule-manual/: CMakeLists.txt
examples/ch09/09-git-submodule-auto/: CMakeLists.txt
examples/ch09/10-git-clone/: CMakeLists.txt
examples/ch10/01-cxx-modules/: CMakeLists.txt  main.cpp  math.cppm
examples/ch11/02-structured/: CMakeLists.txt
examples/ch11/05-install-code/: CMakeLists.txt
examples/ch11/06-coverage/: CMakeLists.txt
examples/ch11/06-install-export/: CMakeLists.txt
examples/ch12/10-version-file/: CMakeLists.txt
examples/ch14/00-test-export/: CMakeLists.txt  main.cpp
examples/ch14/01-export/: CMakeLists.txt
examples/ch14/01-export/src/: CMakeLists.txt
examples/ch14/02-install-targets/: CMakeLists.txt
examples/ch14/03-install-targets-legacy/: CMakeLists.txt
examples/ch14/03-install-targets-legacy/src/: CMakeLists.txt  basic.cpp
examples/ch14/04-install-files/: CMakeLists.txt
examples/ch14/05-install-directories/: CMakeLists.txt
examples/ch14/06-install-code/: CMakeLists.txt
examples/ch14/07-config-file/: CMakeLists.txt
examples/ch14/07-install-export/: CMakeLists.txt
examples/ch14/07-install-export/src/: CMakeLists.txt
examples/ch14/08-config-file/: CMakeLists.txt
examples/ch14/08-config-file/src/: CMakeLists.txt
examples/ch14/10-advanced-config/: CMakeLists.txt
examples/ch14/10-advanced-config/src/: CMakeLists.txt
examples/ch14/11-version-file/: CMakeLists.txt
examples/ch14/11-version-file/src/: CMakeLists.txt
examples/ch14/12-components/: CMakeLists.txt
examples/ch14/12-components/src/: CMakeLists.txt
examples/ch14/13-cpack/: CMakeLists.txt
examples/ch15/01-full-project/: CMakeLists.txt
examples/ch15/01-full-project/src/calc/: CMakeLists.txt
examples/chapter01/01-hello/: .gitignore  hello.cpp
examples/chapter01/02-script/: script.cmake
examples/chapter01/03-module/: CMakeLists.txt
examples/chapter02/01-arguments/: bracket.cmake  unquoted.cmake
examples/chapter02/02-variables/: set.cmake
examples/chapter02/03-environment/: CMakeLists.txt
examples/chapter02/04-scope/: CMakeLists.txt
examples/chapter02/06-conditional/: conditional.cmake  conditional_compare.cmake  conditional_gotcha.cmake
examples/chapter02/07-loops/: zip.cmake
examples/chapter02/08-definitions/: macro.cmake
examples/chapter02/10-useful/: include_guard.cmake  message_error.cmake
examples/chapter03/01-partition/: CMakeLists.txt
examples/chapter03/02-include/: CMakeLists.txt
examples/chapter03/04-subprojects/: CMakeLists.txt  main.cpp
examples/chapter03/06-toolchain/: CMakeLists.txt  main.cpp
examples/chapter03/07-features/: CMakeLists.txt
examples/chapter03/08-test_run/: main.cpp
examples/chapter03/09-in-source/: CMakeLists.txt
examples/chapter04/01-targets/: CMakeLists.txt  calculations.h  drawing.cpp  drawing.h  gui_app.cpp  terminal_app.cpp
examples/chapter04/03-command/: CMakeLists.txt  template.xyz
examples/chapter04/04-command/: CMakeLists.txt
examples/chapter04/05-genex/: CMakeLists.txt
examples/chapter05/01-sources/: CMakeLists.txt  gui_linux.cpp  gui_windows.cpp  main.cpp
examples/chapter05/02-definitions/: CMakeLists.txt
examples/chapter05/03-git/: CMakeLists.txt  print_commit.cpp
examples/chapter05/05-optimize/: CMakeLists.txt
examples/chapter05/06-precompile/: CMakeLists.txt
examples/chapter05/07-debug/: CMakeLists.txt
examples/chapter06/01-libraries/: CMakeLists.txt
examples/chapter06/04-odr-success/: CMakeLists.txt
examples/chapter06/06-unresolved/: CMakeLists.txt
examples/chapter06/07-testing/: CMakeLists.txt
examples/chapter07/01-find-package-variables/: CMakeLists.txt
examples/chapter07/06-git-submodule-auto/: CMakeLists.txt
examples/chapter07/07-git-clone/: CMakeLists.txt
examples/chapter07/08-external-project-git/: CMakeLists.txt
examples/chapter08/01-no-framework/: CMakeLists.txt
examples/chapter08/04-gtest/: CMakeLists.txt
examples/chapter09/01-formatting/: CMakeLists.txt
examples/chapter09/02-clang-tidy/: CMakeLists.txt
home/: .bashrc  .gitmodules  .viminfo
(+65 files in other folders)
